--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,24 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap");
+html {
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 html, body {
   height: 100%;
 }
 
 body {
-  font-size: 18px;
   font-family: "Alegreya Sans", sans-serif;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
@@ -17,13 +30,13 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 960px;
   min-height: 100%;
   overflow: hidden;
 }
 
 .container {
-  width: 940px;
+  width: 95%;
+  max-width: 1100px;
   margin: 0 auto;
   position: relative;
 }
@@ -69,24 +82,40 @@ img {
 
 /*components*/
 .hero {
-  background: url("../img/icons/biggest-leaf.png") right top 60% no-repeat;
+  background: url("../img/icons/biggest-leaf.png") right bottom no-repeat;
   background-color: #61c4d9;
   height: 100vh;
-  min-height: 650px;
+  min-height: 41.6666666667rem;
   color: #fff;
   position: relative;
+  /*&:after {
+    background: url("../img/icons/with_choc.svg");
+    position: absolute;
+    bottom: rem(20px);
+    right: 30%;
+  }*/
+}
+@media screen and (max-width: 768px) {
+  .hero {
+    background-position: right bottom 88%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hero:before, .hero:after {
+    display: none;
+  }
 }
 .hero:before {
   content: url("../img/decor/one-leaf.png");
-  bottom: -40px;
+  bottom: -2.2222222222rem;
   left: 12%;
   position: absolute;
 }
-.hero:after {
-  content: url("../img/decor/raspberry.png");
-  position: absolute;
-  bottom: 20px;
-  right: 30%;
+
+@media screen and (max-width: 768px) {
+  .hero__icons-section {
+    display: none;
+  }
 }
 
 .hero__container {
@@ -94,39 +123,68 @@ img {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  padding: 24px 0 45px;
-  background: url("../img/decor/choc.png") right no-repeat;
+  padding: 1.3333333333rem 0 2.5rem;
+  background: url("../img/icons/choc.svg") right no-repeat;
+  /*&:before {
+   position: absolute;
+   right: 0;
+   bottom: rem(70px);
+   content: url("../img/icons/with_choc.svg");
+   }
+
+   &:after {
+     position: absolute;
+     bottom: -10%;
+     right: 10%;
+     content: url("../img/decor/blackberry.png");
+   }*/
 }
-.hero__container:before {
-  position: absolute;
-  right: 0;
-  bottom: 70px;
-  content: url("../img/decor/big-leaf.png");
-}
-.hero__container:after {
-  position: absolute;
-  bottom: -10%;
-  right: 10%;
-  content: url("../img/decor/blackberry.png");
+@media screen and (max-width: 768px) {
+  .hero__container {
+    background: none;
+  }
 }
 
 .hero__title-section {
-  width: 46%;
+  width: 50%;
+}
+@media screen and (max-width: 768px) {
+  .hero__title-section {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .hero__title-section:before {
+    content: url(../img/icons/bars_and_berries.svg);
+  }
 }
 
 .hero__main-title {
-  font-size: 48px;
+  font-size: 2.6666666667rem;
   line-height: 1.1;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 0;
   text-transform: uppercase;
 }
 
 .hero__title-description {
-  font-size: 21px;
-  margin-bottom: 50px;
+  font-size: 1.1666666667rem;
+  margin-bottom: 1.6666666667rem;
   padding-right: 10%;
-  width: 90%;
+}
+@media screen and (max-width: 768px) {
+  .hero__title-description {
+    padding: 0 25%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero__title-description {
+    padding: 0 16%;
+  }
 }
 
 .header {
@@ -135,13 +193,19 @@ img {
   justify-content: space-between;
 }
 
+@media screen and (max-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+
 .menu__list {
   display: flex;
   align-items: center;
 }
 
 .menu__item {
-  margin-right: 27px;
+  margin-right: 1.5rem;
 }
 
 .menu__item:last-child {
@@ -153,16 +217,22 @@ img {
 }
 
 .phone-number {
-  font-size: 24px;
+  font-size: 1.3333333333rem;
   text-decoration: none;
   display: flex;
   align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .header__phone-number {
+    display: none;
+  }
+}
+
 .phone-number__icon-elem {
-  width: 12px;
-  height: 12px;
-  margin-right: 6px;
+  width: 0.6666666667rem;
+  height: 0.6666666667rem;
+  margin-right: 0.3333333333rem;
 }
 
 .features {
@@ -170,7 +240,7 @@ img {
 }
 
 .feature__item {
-  margin-right: 46px;
+  margin-right: 2.5555555556rem;
 }
 .feature__item:last-child {
   margin-right: 0;
@@ -181,21 +251,21 @@ img {
 }
 
 .feature__icon {
-  width: 45px;
-  margin-right: 7px;
+  width: 2.5rem;
+  margin-right: 0.3888888889rem;
 }
 
 .feature__text {
-  font-size: 16px;
-  max-width: 85px;
+  font-size: 0.8888888889rem;
+  max-width: 4.7222222222rem;
 }
 
 .button {
-  font-size: 19px;
+  font-size: 1.0555555556rem;
   font-weight: bold;
-  padding: 18px 35px;
+  padding: 1rem 1.9444444444rem;
   text-transform: uppercase;
-  border-radius: 100px;
+  border-radius: 5.5555555556rem;
   line-height: 1;
   text-decoration: none;
   display: inline-block;
@@ -235,23 +305,23 @@ img {
 
 .section {
   height: 100vh;
-  min-height: 650px;
+  min-height: 36.1111111111rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .section__title {
-  font-size: 48px;
+  font-size: 2.6666666667rem;
   font-weight: bold;
-  margin-bottom: 60px;
+  margin-bottom: 3.3333333333rem;
   text-align: center;
   text-transform: uppercase;
   color: #000;
 }
 
 .headline__title {
-  margin-bottom: 25px;
+  margin-bottom: 1.3888888889rem;
 }
 
 .section--font-color--geen {
@@ -264,18 +334,33 @@ img {
 .benefits {
   display: flex;
 }
+@media screen and (max-width: 480px) {
+  .benefits {
+    flex-direction: column;
+  }
+}
 
 .benefits__item {
   flex: 1;
   padding: 0 3%;
   position: relative;
 }
+@media screen and (max-width: 480px) {
+  .benefits__item {
+    padding: 0;
+  }
+}
 .benefits__item:before {
   content: url("../img/icons/sep.png");
   position: absolute;
-  top: 30px;
+  top: 1.6666666667rem;
   right: 0;
   transform: translateX(50%);
+}
+@media screen and (max-width: 480px) {
+  .benefits__item:before {
+    display: none;
+  }
 }
 .benefits__item:first-child {
   padding-left: 0;
@@ -293,8 +378,8 @@ img {
 
 .benefit__image--wrapper {
   display: inline-block;
-  width: 126px;
-  height: 126px;
+  width: 7rem;
+  height: 7rem;
   position: relative;
   background: #f2f5f4;
   border-radius: 50%;
@@ -302,8 +387,8 @@ img {
 }
 
 .benefit__icon {
-  width: 75px;
-  height: 69px;
+  width: 4.1666666667rem;
+  height: 3.8333333333rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -317,11 +402,11 @@ img {
 
 .headline {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 1.1111111111rem;
 }
 
 .headline__title {
-  margin-bottom: 10px;
+  margin-bottom: 0.5555555556rem;
 }
 
 .headline__subtitle {
@@ -332,40 +417,84 @@ img {
   position: relative;
   background: url("../img/icons/grey_leaf.png") left top 57% no-repeat;
 }
+@media screen and (max-width: 768px) {
+  .benefits-section {
+    background-position: left top;
+  }
+}
+@media screen and (max-width: 480px) {
+  .benefits-section {
+    background: none;
+  }
+}
 .benefits-section:before {
+  position: absolute;
+  right: 10%;
+  top: -50%;
+  content: url("../img/icons/with_choc.svg");
+}
+@media screen and (max-width: 768px) {
+  .benefits-section:before {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .benefits-section:before {
+    display: none;
+  }
+}
+.benefits-section:after {
   content: url("../img/icons/raspberry-and-bars.png");
   position: absolute;
-  bottom: -90px;
+  bottom: -5rem;
   left: 0;
+}
+@media screen and (max-width: 480px) {
+  .benefits-section:after {
+    display: none;
+  }
 }
 
 .reviews__display {
-  background: url("../img/decor/drawing.png") right top 20px no-repeat;
+  background: url("../img/decor/drawing.png") right top 1.1111111111rem no-repeat;
   background-color: #f8faf9;
-  padding: 50px 45px 34px;
+  padding: 2.7777777778rem 2.5rem 1.8888888889rem;
   overflow: hidden;
   position: relative;
 }
 .reviews__display:before {
   content: "";
   display: block;
-  width: 90px;
-  height: 90px;
+  width: 5rem;
+  height: 5rem;
   background: #fff;
   border-radius: 50%;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: -65px;
+  top: -3.6111111111rem;
 }
 
 .reviews__display-inner {
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .reviews__display-inner {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+}
 
 .reviews__avatar {
-  width: 254px;
-  height: 260px;
+  width: 14.1111111111rem;
+  height: 14.4444444444rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__avatar {
+    width: 7.2222222222rem;
+    height: 7.3333333333rem;
+  }
 }
 
 .reviews__avatar-img {
@@ -376,23 +505,28 @@ img {
 
 .reviews__content {
   flex: 1;
-  margin-left: 20px;
+  margin-left: 1.1111111111rem;
 }
 
 .reviews__title {
-  font-size: 30px;
+  font-size: 1.6666666667rem;
   font-weight: bold;
-  margin-bottom: 22px;
+  margin-bottom: 1.2222222222rem;
   color: #000;
 }
 
 .reviews__text {
-  margin-bottom: 36px;
+  margin-bottom: 2rem;
   width: 76%;
+}
+@media screen and (max-width: 768px) {
+  .reviews__text {
+    width: 100%;
+  }
 }
 
 .reviews__author {
-  font-size: 19px;
+  font-size: 1.0555555556rem;
   font-weight: bold;
   color: #000;
 }
@@ -403,22 +537,21 @@ img {
 }
 
 .interactive-avatar {
-  width: 80px;
-  height: 80px;
-  border: 4px solid transparent;
-  border-radius: 50%;
-  overflow: hidden;
+  width: 4.4444444444rem;
+  height: 4.4444444444rem;
 }
-.interactive-avatar--active {
-  border: 4px solid #365A49;
+
+.interactive-avatar--active .interactive-avatar__link {
+  border-color: #365A49;
 }
 
 .interactive-avatar__link {
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   display: block;
+  border: 0.2222222222rem solid transparent;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .interactive-avatar__img {
@@ -429,11 +562,12 @@ img {
 }
 
 .reviews-section {
-  background: url("../img/decor/strawberry.png") right 10% top no-repeat;
+  background: url("../img/decor/strawberry.png") right top no-repeat;
 }
 
 .order-section {
-  background: lightgray;
+  background: url("../img/icons/order_sec.svg") no-repeat;
+  background-size: 100%;
 }
 .order-section:before {
   content: url("../img/decor/backberries.png");
@@ -442,7 +576,7 @@ img {
   bottom: 20%;
 }
 .order-section:after {
-  content: url("../img/decor/one-berry.png");
+  content: url("../img/icons/one-berry.svg");
   position: absolute;
   left: 10%;
   bottom: 2%;
@@ -451,23 +585,34 @@ img {
 .form {
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .form {
+    flex-direction: column;
+    padding: 0 19%;
+  }
+}
 
 .form__col {
   flex: 1;
-  margin-right: 20px;
+  margin-right: 1.1111111111rem;
 }
 .form__col:last-child {
   margin-right: 0;
 }
+@media screen and (max-width: 768px) {
+  .form__col {
+    margin-right: 0;
+  }
+}
 
 .form__row {
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: 1rem;
 }
 
 .form__block {
   flex: 1;
-  margin-right: 20px;
+  margin-right: 1.1111111111rem;
 }
 .form__block:last-child {
   margin-right: 0;
@@ -476,11 +621,11 @@ img {
 .form__input {
   width: 100%;
   border: none;
-  padding: 18px 11px;
-  border: solid 3px transparent;
+  padding: 1rem 0.6111111111rem;
+  border: solid 0.1666666667rem transparent;
 }
 .form__input--textarea {
-  height: 170px;
+  height: 9.4444444444rem;
   resize: none;
 }
 .form__input:focus {
@@ -491,7 +636,7 @@ img {
 .form__controls {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin-bottom: 1.1111111111rem;
 }
 .form__controls:last-child {
   margin: 0;
@@ -500,13 +645,19 @@ img {
 .form__buttons {
   margin-top: 15%;
 }
+@media screen and (max-width: 768px) {
+  .form__buttons {
+    display: flex;
+    justify-content: center;
+  }
+}
 
 .radio {
   display: flex;
   cursor: pointer;
   -webkit-user-select: none;
           user-select: none;
-  margin-right: 40px;
+  margin-right: 2.2222222222rem;
 }
 .radio--checkbox .radio__visible {
   border-radius: 0;
@@ -519,24 +670,32 @@ img {
   margin: 0;
 }
 
-.radio__elem {
-  display: none;
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  height: 0.0555555556rem;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 0.0555555556rem;
 }
+
 .radio__elem:checked ~ .radio__visible:before {
   display: block;
 }
 
 .radio__visible {
-  width: 26px;
-  height: 26px;
+  width: 1.4444444444rem;
+  height: 1.4444444444rem;
   position: relative;
   border-radius: 50%;
   background: #fff;
 }
 .radio__visible:before {
   content: "";
-  width: 14px;
-  height: 14px;
+  width: 0.7777777778rem;
+  height: 0.7777777778rem;
   background: #365a49;
   border-radius: 50%;
   position: absolute;
@@ -547,7 +706,7 @@ img {
 }
 
 .radio__title {
-  margin-left: 15px;
+  margin-left: 0.8333333333rem;
 }
 
 .fixed-menu {
@@ -556,9 +715,14 @@ img {
   right: 3%;
   z-index: 100;
 }
+@media screen and (max-width: 768px) {
+  .fixed-menu {
+    display: none;
+  }
+}
 
 .fixed-menu__item {
-  margin-bottom: 5px;
+  margin-bottom: 0.2777777778rem;
 }
 
 .fixed-menu__item--active .fixed-menu__link {
@@ -566,22 +730,43 @@ img {
 }
 
 .fixed-menu__link {
-  width: 16px;
-  height: 16px;
+  width: 0.8888888889rem;
+  height: 0.8888888889rem;
   border-radius: 50%;
-  border: 1px solid transparent;
+  border: 0.0555555556rem solid transparent;
   display: block;
   position: relative;
 }
 .fixed-menu__link:before {
   content: "";
   display: block;
-  width: 6px;
-  height: 6px;
+  width: 0.3333333333rem;
+  height: 0.3333333333rem;
   border-radius: 50%;
   background: #fff;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.hamburger {
+  height: 20px;
+  width: 24px;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: inline-flex;
+  }
+}
+
+.hamburger__plank {
+  display: block;
+  background: #fff;
+  height: 4px;
+  border-radius: 10px;
 }
