--- a/css/components/benefits.scss
+++ b/css/components/benefits.scss
@@ -1,18 +1,30 @@
 .benefits {
   display: flex;
+
+  @include phones {
+    flex-direction: column;
+  }
 }
 
 .benefits__item {
   flex: 1;
   padding: 0 3%;
-  position: relative; 
+  position: relative;
+  
+  @include phones {
+    padding: 0;
+  }
 
   &:before {
     content: url("../img/icons/sep.png");
     position:absolute;
-    top:30px;
+    top:rem(30px);
     right: 0;
     transform: translateX(50%);
+
+    @include phones {
+      display: none;
+    }
   }
   &:first-child {
     padding-left: 0;
