--- a/css/components/form.scss
+++ b/css/components/form.scss
@@ -1,24 +1,34 @@
 .form {
   display: flex;
+
+  @include tablets {
+  flex-direction: column;
+  padding: 0 19%;
+  }
+
 }
 
 .form__col {
   flex: 1;
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &:last-child {
+    margin-right: 0;
+  }
+
+  @include tablets {
     margin-right: 0;
   }
 }
 
 .form__row {
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: rem(18px);
 }
 
 .form__block {
   flex: 1;
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &:last-child {
     margin-right: 0;
@@ -28,11 +38,11 @@
 .form__input {
   width: 100%;
   border: none;
-  padding: 18px 11px;
-  border: solid 3px transparent;
+  padding: rem(18px) rem(11px);
+  border: solid rem(3px) transparent;
 
   &--textarea{
-  height: 170px;
+  height: rem(170px);
   resize: none;
 }
 
@@ -45,7 +55,7 @@
 .form__controls {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin-bottom: rem(20px);
 
   &:last-child {
     margin: 0;
@@ -54,4 +64,9 @@
 
 .form__buttons {
   margin-top: 15%;
+
+  @include tablets {
+    display: flex;
+    justify-content: center;
+  }
 }
