--- a/css/components/header.scss
+++ b/css/components/header.scss
@@ -4,13 +4,19 @@
   justify-content: space-between;
 }
 
+.menu {
+  @include tablets {
+    display: none;
+  }
+}
+
 .menu__list {
   display: flex;
   align-items: center;
 }
 
 .menu__item {
-  margin-right: 27px;
+  margin-right: rem(27px);
 }
 
 .menu__item:last-child {
@@ -22,16 +28,22 @@
 }
 
 .phone-number {
-  font-size: 24px;
+  font-size: rem(24px);
   text-decoration: none;
   display: flex;
   align-items: center;
 
 }
 
+.header__phone-number {
+  @include tablets {
+    display: none;
+  }
+}
+
 .phone-number__icon-elem {
-  width: 12px;
-  height: 12px;
-  margin-right: 6px;
+  width: rem(12px);
+  height: rem(12px);
+  margin-right: rem(6px);
 }
 
