--- a/css/components/headline.scss
+++ b/css/components/headline.scss
@@ -1,10 +1,10 @@
 .headline {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: rem(20px);
 }
 
 .headline__title {
-  margin-bottom: 10px;
+  margin-bottom: rem(10px);
 }
 
 .headline__subtitle {
