--- a/css/components/hero.scss
+++ b/css/components/hero.scss
@@ -1,22 +1,38 @@
 .hero {
-  background: url("../img/icons/biggest-leaf.png") right top 60% no-repeat;
+  background: url("../img/icons/biggest-leaf.png") right bottom no-repeat;
   background-color: $blue;
   height: 100vh;
-  min-height:650px;
+  min-height:rem(750px);
   color: #fff;
   position: relative;
 
+  @include tablets {
+    background-position: right bottom 88%;
+  }
+
+  &:before, &:after {
+    @include tablets {
+      display: none;
+    }
+  }
+
   &:before {
     content: url("../img/decor/one-leaf.png");
-    bottom: -40px;
+    bottom: rem(-40px);
     left: 12%;
     position: absolute;
   }
-  &:after {
-    content: url("../img/decor/raspberry.png");
+  /*&:after {
+    background: url("../img/icons/with_choc.svg");
     position: absolute;
-    bottom: 20px;
+    bottom: rem(20px);
     right: 30%;
+  }*/
+}
+
+.hero__icons-section{
+  @include tablets {
+    display: none;
   }
 }
 
@@ -25,14 +41,18 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  padding: 24px 0 45px;
-  background: url("../img/decor/choc.png") right no-repeat ;
+  padding: rem(24px) 0 rem(45px);
+  background: url("../img/icons/choc.svg") right no-repeat ;
 
-  &:before {
+  @include tablets {
+    background: none;
+  }  
+
+   /*&:before {
     position: absolute;
     right: 0;
-    bottom: 70px;
-    content: url("../img/decor/big-leaf.png");
+    bottom: rem(70px);
+    content: url("../img/icons/with_choc.svg");
     }
 
     &:after {
@@ -40,26 +60,47 @@
       bottom: -10%;
       right: 10%;
       content: url("../img/decor/blackberry.png");
-    }
+    }*/
 }
 
 .hero__title-section {
-  width: 46%;
+  width: 50%;
+
+  @include tablets {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    &:before {
+      content: url(../img/icons/bars_and_berries.svg);
+    }
+  }  
 }
 
 .hero__main-title {
-  font-size: 48px;
+  font-size: rem(48px);
   line-height: 1.1;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom:0;
   text-transform: uppercase;
 
 }
 
 .hero__title-description {
-  font-size: 21px;
-  margin-bottom: 50px;
+  font-size: rem(21px);
+  margin-bottom: rem(30px);
   padding-right: 10%;
-  width: 90%;
+
+  @include tablets {
+    padding: 0 25%;
+  }
+
+  @include phones {
+    padding: 0 16%;
+  }
 }
 
