--- a/css/components/interactive-avatar.scss
+++ b/css/components/interactive-avatar.scss
@@ -1,22 +1,19 @@
 .interactive-avatar {
-  width: 80px;
-  height: 80px;
-  border: 4px solid transparent;
-  border-radius: 50%;
-  overflow: hidden;
+  width: rem(80px);
+  height: rem(80px); 
+}
 
-  &--active {
-    border: 4px solid #365A49; 
-  }
+.interactive-avatar--active .interactive-avatar__link {
+  border-color  : #365A49; 
 }
 
 .interactive-avatar__link {
-  //position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  display: block;
+  display: block; 
+  border: rem(4px) solid transparent;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .interactive-avatar__img {
