--- a/css/components/reviews-section.scss
+++ b/css/components/reviews-section.scss
@@ -1,3 +1,3 @@
 .reviews-section {
-  background: url("../img/decor/strawberry.png") right 10% top no-repeat;
+  background: url("../img/decor/strawberry.png") right top no-repeat;
 }
