--- a/css/components/reviews.scss
+++ b/css/components/reviews.scss
@@ -1,32 +1,43 @@
 .reviews__display {
-  background: url("../img/decor/drawing.png") right top 20px no-repeat;
+  background: url("../img/decor/drawing.png") right top rem(20px) no-repeat;
   background-color: #f8faf9;
-  padding: 50px 45px 34px;
+  padding: rem(50px) rem(45px) rem(34px);
   overflow: hidden;
   position: relative;
 
   &:before {
     content: "";
     display: block;
-    width: 90px;
-    height: 90px;
+    width: rem(90px);
+    height: rem(90px);
     background: #fff;
     border-radius: 50%;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: -65px;
+    top: rem(-65px);
   }
 
 }
 
 .reviews__display-inner {
   display: flex;
+
+  @include tablets {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
 }
 
 .reviews__avatar {
-  width: 254px;
-  height: 260px;
+  width: rem(254px);
+  height: rem(260px);
+
+  @include tablets {
+    width: rem(130px);
+    height: rem(132px);
+  }
 }
 
 .reviews__avatar-img {
@@ -37,23 +48,27 @@
 
 .reviews__content {
   flex: 1;
-  margin-left: 20px;
+  margin-left: rem(20px);
 }
 
 .reviews__title {
-  font-size: 30px;
+  font-size: rem(30px);
   font-weight: bold;
-  margin-bottom: 22px;
+  margin-bottom: rem(22px);
   color: #000;
 }
 
 .reviews__text {
-  margin-bottom: 36px;
+  margin-bottom: rem(36px);
   width: 76%;
+
+  @include tablets {
+    width: 100%;
+  }
 }
 
 .reviews__author {
-  font-size: 19px;
+  font-size: rem(19px);
   font-weight: bold;
   color: #000;
 }
